--- a/latex/Employee_8h.tex
+++ b/latex/Employee_8h.tex
@@ -5,8 +5,7 @@
 Header file for Employees.  
 
 
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
