--- a/latex/Officer_8h.tex
+++ b/latex/Officer_8h.tex
@@ -6,16 +6,14 @@ Header for officers.
 
 
 {\ttfamily \#include \char`\"{}Employee.\+h\char`\"{}}\newline
-Include dependency graph for Officer.\+h\+:
-\nopagebreak
+Include dependency graph for Officer.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=154pt]{Officer_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
