--- a/latex/Supervisor_8cpp.tex
+++ b/latex/Supervisor_8cpp.tex
@@ -7,8 +7,7 @@ Driver for our \mbox{\hyperlink{classSupervisor}{Supervisor}} Class.
 
 {\ttfamily \#include \char`\"{}Supervisor.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
-Include dependency graph for Supervisor.\+cpp\+:
-\nopagebreak
+Include dependency graph for Supervisor.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
