--- a/latex/Supervisor_8h.tex
+++ b/latex/Supervisor_8h.tex
@@ -6,16 +6,14 @@ Header for our supervisor class.
 
 
 {\ttfamily \#include \char`\"{}Employee.\+h\char`\"{}}\newline
-Include dependency graph for Supervisor.\+h\+:
-\nopagebreak
+Include dependency graph for Supervisor.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=157pt]{Supervisor_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
