--- a/latex/main_8cpp.tex
+++ b/latex/main_8cpp.tex
@@ -9,8 +9,7 @@ Driver for \mbox{\hyperlink{classEmployee}{Employee}} program.
 {\ttfamily \#include \char`\"{}Employee.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Supervisor.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Officer.\+h\char`\"{}}\newline
-Include dependency graph for main.\+cpp\+:
-\nopagebreak
+Include dependency graph for main.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
